<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

        <variable
            name="model"
            type="com.weatherdemo.model.ResponseModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:theme="@style/MyToolbarStyle"
            app:title="@string/app_name" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weatherDetailTxtLblName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/NameOfArea"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weatherDetailTxtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/notapplicable"
                android:text="@{model.name}"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weatherDetailTxtLblName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weatherDetailTxtLblLat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/latitude"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weatherDetailTxtName"
                app:layout_constraintWidth_percent="0.5" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weatherDetailTxtLat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/roboto_bold"
                android:hint="@string/notapplicable"
                android:text="@{String.valueOf(model.coord.lat)}"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weatherDetailTxtLblLat"
                app:layout_constraintWidth_percent="0.5" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weatherDetailTxtLblLongitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/Longitude"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintStart_toEndOf="@+id/weatherDetailTxtLblLat"
                app:layout_constraintTop_toBottomOf="@id/weatherDetailTxtName"
                app:layout_constraintWidth_percent="0.5" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weatherDetailTxtLongitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/roboto_bold"
                android:hint="@string/notapplicable"
                android:text="@{String.valueOf(model.coord.lon)}"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintStart_toEndOf="@+id/weatherDetailTxtLat"
                app:layout_constraintTop_toBottomOf="@id/weatherDetailTxtLblLongitude"
                app:layout_constraintWidth_percent="0.5" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weatherDetailTxtLblTempMin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/min_temp"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weatherDetailTxtLat"
                app:layout_constraintWidth_percent="0.5" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weatherDetailTxtTempMin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/roboto_bold"
                android:hint="@string/notapplicable"
                android:text="@{String.valueOf(model.main.temp_min)}"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weatherDetailTxtLblTempMin"
                app:layout_constraintWidth_percent="0.5" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weatherDetailTxtLblTempMax"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/max_temp"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintStart_toEndOf="@+id/weatherDetailTxtLblTempMin"
                app:layout_constraintTop_toBottomOf="@id/weatherDetailTxtLat"
                app:layout_constraintWidth_percent="0.5" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weatherDetailTxtTempMax"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/roboto_bold"
                android:hint="@string/notapplicable"
                android:text="@{String.valueOf(model.main.temp_max)}"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintStart_toEndOf="@+id/weatherDetailTxtTempMin"
                app:layout_constraintTop_toBottomOf="@id/weatherDetailTxtLblTempMin"
                app:layout_constraintWidth_percent="0.5" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weatherDetailTxtLblWindspeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/WindSpeed"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weatherDetailTxtTempMin" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weatherDetailTxtWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/notapplicable"
                android:text="@{String.valueOf(model.wind.speed)}"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weatherDetailTxtLblWindspeed" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>